--- a/app-lilazul-Geppiev2.html
+++ b/app-lilazul-Geppiev2.html
@@ -229,7 +229,6 @@
           </form>
 
           <p class="muted" style="margin:10px 0 0; font-size:13px;">
-            Si ves ⚠️, revisa que tu servidor esté corriendo en 127.0.0.1:8000 y permita CORS.
           </p>
         </div>
       </div>
@@ -340,7 +339,7 @@
 
       const options = { year: "numeric", month: "long", day: "numeric" };
       startDateTextEl.textContent =
-        "Fecha de inicio (editable en código): " +
+        "Fecha de inicio:" +
         START_DATE.toLocaleDateString("es-ES", options);
     }
 
